# NuumVoxel

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.hpp  FileDialog.hpp  Nuum.hpp  Palette.hpp  PaletteManager.hpp  Serializer.hpp  ToolBox.hpp  Vertex.hpp  VoxelManager.hpp
shaders/: cs_ray.sc  cs_resize.sc  fs_ray.sc  fs_screen.sc  varying.def.sc  vs_ray.sc
src/: Camera.cpp  FileDialog.cpp  Nuum.cpp  Palette.cpp  PaletteManager.cpp  Serializer.cpp  ToolBox.cpp  VoxelManager.cpp  imgui_impl_bgfx.cpp  main.cpp
